Update package.json repo url

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Logger for express",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": "https://github.com/zkilleb/express-logger",
   "scripts": {
     "build": "tsc",
     "prettier": "prettier --write ./src/**/*.{js,ts}",
