--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "explogger",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Logger for express",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,27 +9,33 @@
     "build": "tsc",
     "prettier": "prettier --write ./src/**/*.{js,ts}",
     "lint": "tslint -p tsconfig.json",
-    "prepare": "npm run build",
+    "test": "jest ./src",
+    "prepare": "npm run test && npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
+  "dependencies": {
+    "@types/node": "16.11.7",
+    "dayjs": "1.10.7"
+  },
   "devDependencies": {
+    "@babel/core": "7.16.0",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
     "@types/chai": "4.2.19",
+    "@types/jest": "^27.0.3",
     "@types/mocha": "8.2.2",
+    "babel-jest": "27.3.1",
     "chai": "4.3.4",
     "jest": "27.0.5",
     "lint": "0.7.0",
-    "prettier": "^2.4.1",
+    "prettier": "2.4.1",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "^4.5.0-dev.20210926"
+    "typescript": "4.5.0-dev.20210926"
   },
   "author": "Zach Killebrew",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^16.11.7",
-    "dayjs": "^1.10.7"
-  }
+  "license": "ISC"
 }
