--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "explogger",
-  "version": "1.1.1",
-  "description": "Logger for express",
+  "version": "2.0.1",
+  "description": "Logging middleware for express",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/zkilleb/express-logger",
-  "keywords": ["express", "logging", "middleware", "logger"],
+  "keywords": [
+    "express",
+    "logging",
+    "middleware",
+    "logger"
+  ],
   "scripts": {
     "build": "tsc",
     "prettier": "prettier --write ./src/**/*.{js,ts}",
@@ -18,24 +23,24 @@
     "postversion": "git push && git push --tags"
   },
   "dependencies": {
-    "@types/node": "16.11.7",
-    "dayjs": "1.10.7"
+    "dayjs": "1.11.5"
   },
   "devDependencies": {
-    "@babel/core": "7.16.0",
-    "@babel/preset-env": "7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/chai": "4.2.19",
-    "@types/jest": "^27.0.3",
-    "@types/mocha": "8.2.2",
-    "babel-jest": "27.3.1",
-    "chai": "4.3.4",
-    "jest": "27.0.5",
-    "lint": "0.7.0",
-    "prettier": "2.4.1",
+    "@babel/core": "7.18.13",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-typescript": "7.18.6",
+    "@types/chai": "4.3.3",
+    "@types/jest": "29.0.0",
+    "@types/mocha": "9.1.1",
+    "@types/node": "18.7.14",
+    "babel-jest": "29.0.1",
+    "chai": "4.3.6",
+    "jest": "29.0.1",
+    "lint": "1.1.2",
+    "prettier": "2.7.1",
     "tslint": "6.1.3",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "4.5.0-dev.20210926"
+    "typescript": "4.8.2"
   },
   "author": "Zach Killebrew",
   "license": "ISC"
